fixed ama chatbox bugs and added collapse feature

--- a/src/app/ask-me-anything/ask-me-anything-page/ask-me-anything-page.component.css
+++ b/src/app/ask-me-anything/ask-me-anything-page/ask-me-anything-page.component.css
@@ -44,3 +44,8 @@ textarea {
     background-color : white;
 }
 
+#open {
+    color : white;
+    border : none;
+}
+
